--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   },
   "dependencies": {
     "egg": "^2.6.1",
-    "egg-scripts": "^2.6.0"
+    "egg-cors": "^2.2.3",
+    "egg-jwt": "^3.1.7",
+    "egg-scripts": "^2.6.0",
+    "egg-sequelize": "^6.0.0",
+    "module-alias": "^2.2.2",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
@@ -31,12 +36,16 @@
     "@types/supertest": "^2.0.0",
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
-    "egg-ci": "^1.8.0",
+    "class-transformer": "^0.5.1",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.1",
     "egg-bin": "^4.11.0",
+    "egg-ci": "^1.8.0",
     "egg-mock": "^3.16.0",
-    "tslib": "^1.9.0",
     "eslint": "^6.7.2",
     "eslint-config-egg": "^8.0.0",
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^1.9.0",
     "typescript": "^3.0.0"
   },
   "engines": {
@@ -49,7 +58,13 @@
     "type": "git",
     "url": ""
   },
-  "eslintIgnore": ["coverage"],
+  "eslintIgnore": [
+    "coverage"
+  ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "_moduleAliases": {
+    "@root": ".",
+    "@app": "app"
+  }
 }
