--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,46 @@
 {
+  // 设置保存文件的时候自动编译
   "compileOnSave": true,
+  // 配置编译选项
   "compilerOptions": {
+    // 目标语言的版本
     "target": "es2017",
+    // 生成代码的模板标准
     "module": "commonjs",
-    "strict": true,
+    // 严格模式 
+    "strict": false,
+    // 不允许隐式的any类型
     "noImplicitAny": false,
+    // 用于指定是否启用实验性的装饰器特性
     "experimentalDecorators": true,
+    // 用于指定是否为装饰器提供元数据支持，关于元数据，也是ES6的新标准，
+    //  可以通过Reflect提供的静态方法获取元数据，如果需要使用Reflect的一些方法，需要引入ES2015.Reflect这个库
     "emitDecoratorMetadata": true,
     "charset": "utf8",
+    // 允许在JS文件中报错，通常与allowJS一起使用
     "allowJs": false,
-    "pretty": true,
+    // "pretty": true,
+    // 发送错误时不输出任何文件
     "noEmitOnError": false,
+    // 检查只声明、未使用的局部变量(只提示不报错)
     "noUnusedLocals": true,
+    // 检查未使用的函数参数(只提示不报错)
     "noUnusedParameters": true,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
+    // "allowUnreachableCode": false,
+    // "allowUnusedLabels": false,
+    // 类的实例属性必须初始化
     "strictPropertyInitialization": false,
+    // 防止switch语句贯穿(即如果没有break语句后面不会执行)
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
+    // "skipLibCheck": true,
+    // "skipDefaultLibCheck": true,
+    // 生成目标文件的inline SourceMap，inline SourceMap会包含在生成的js文件中
     "inlineSourceMap": true,
-    "importHelpers": true
+    // 通过tslib引入helper函数，文件必须是模块
+    "importHelpers": true,
+    "types": ["reflect-metadata"],
   },
+  // 排除的文件或文件夹
   "exclude": [
     "app/public",
     "app/views",
