--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "egg-mock": "^3.16.0",
     "eslint": "^6.7.2",
     "eslint-config-egg": "^8.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "reflect-metadata": "^0.1.13",
     "tslib": "^1.9.0",
     "typescript": "^3.0.0"
